# al-bayan-compiler

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LAUNCH.md  README.md  ROADMAP.md  WHITEPAPER.md  ai.bayan  all_roots.txt  antivirus.bayan  api_server.py  app_engine.py  automation.bayan  bayan_bot.py  bayan_cli.sh  bayan_exec_real.py  bayan_exec_real.py.backup  bayan_full.py  bayan_full_new.py  bayan_gemini.py  bayan_generate.py  bayan_portal.html  bayan_repl.sh  bayan_simple.py  final_20.bayan  final_test.bayan  fix.patch  hello.bayan  live_demo.py  miracle.html  mobile.bayan  monitoring.bayan  mubeen.py  network.bayan  scanner.bayan  server_guard.bayan  stdlib.bayan  stress_test.bayan  test_fix.bayan  (+6 more)
al_haram/: Cargo.toml
al_masjid/: Cargo.toml
almujiz/: انماط.بيان  ذاكرة_المعجز.txt  قاموس_المعجز.txt
bayan_ide/: community.html  counter.php  download.html  index.html  index_new.html  roadmap.html  save_app.php  showcase.html  الدليل.html  الدليل_قديم.html  دفتر_البيان.html  معجزة.html  معجزة_قديم.html
bayan_llvm/: Cargo.toml
bayan_llvm_core/: Cargo.toml
bayan_lsp/: Cargo.toml
bayan_lsp/src/: main.rs  server.rs
bayan_stdlib/: Cargo.toml
bayan_to_c/: Cargo.toml  test_main.rs  test_stdlib.rs
bayan_wasm/: Cargo.toml
bayan_wasm/src/: lib.rs
benches/: comparison.md
community/: الدليل.html
deploy/: bayan-guard.service  hacker-terminal
docs/: _config.yml  challenge.html  documentation.html  index.html  manifesto.html  specification.md  video.html  welcome.html  الدليل.html  معجزة.html
examples/: hello.bayan  برنامج_صحيح.bayan  كود_بليغ.bayan  كود_مطول.bayan  موقع.bayan
logs/: pentest_report_20260620_205105.json
production/: agentic_ai.py  agentic_ai_v2.py  agentic_ai_v3.py  agentic_ai_v4.py  ai_core.py  ai_core_v2.py  bayan_compiler.py  cisco_cve_scanner.py  cloudflare_bypass.py  containment_scanner.py  delayed_payload.py  fortigate_scanner.py  god_mode_ultimate.py  npm_scanner.py  pentest_full.py  shapeshifter.py  shapeshifter_v2.py  shapeshifter_v3.py  shapeshifter_v4.py  shapeshifter_v5.py  (+12 more)
(+107 files in other folders)
