[package]
name = "bayan_compiler"
version = "0.5.0"
edition = "2021"

[lib]
name = "bayan_compiler"
path = "src/lib.rs"

[[bin]]
name = "bayan"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
lazy_static = "1.4"
urlencoding = "2.1"
