[package]
name = "bayan_lsp"
version = "0.1.0"
edition = "2021"
description = "خادم لغة البيان - Language Server Protocol"

[dependencies]
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bayan_compiler = { path = ".." }

[[bin]]
name = "bayan_lsp"
path = "src/main.rs"
