[package]
name = "bayan_wasm"
version = "0.1.0"
edition = "2021"
description = "مترجم WebAssembly للغة البيان"

[lib]
crate-type = ["cdylib", "rlib"]
name = "bayan_wasm"
path = "src/lib.rs"

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bayan_compiler = { path = "../" }
